enable and desable

--- a/deploy/src/main/resources/application.properties
+++ b/deploy/src/main/resources/application.properties
@@ -36,11 +36,12 @@ swagger.displayRequestDuration=false
 swagger.filter=false
 swagger.maxDisplayedTags=0
 swagger.showExtensions=false
+spring.thymeleaf.prefix=classpath:/templates
 #time in millis for a pending confirmation
 signup.keep.pending.user=1080000
 #max allowed columns in a select when creating a new project dataset
 select.max.allowed.columns=10
-forgotten.password.web.page=http://localhost:8080/reset-password
+forgotten.password.web.page=http://localhost:8080/log/reset-password
 forgotten.password.keep.time=600000
 
 
