--- a/deploy/src/main/resources/application.properties
+++ b/deploy/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=barbos
 spring.datasource.password=190203
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 
