--- a/deploy/src/main/resources/application.properties
+++ b/deploy/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.profiles.active=default
 <filtering>true</filtering>
 server.port=8080
+SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=1;
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&jdbcCompliantTruncation=false
 spring.datasource.username=barbos
 spring.datasource.password=190203
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 
@@ -43,7 +44,6 @@ signup.keep.pending.user=1080000
 select.max.allowed.columns=10
 forgotten.password.web.page=http://localhost:8080/log/reset-password
 forgotten.password.keep.time=600000
-
 
 
 spring.main.allow-bean-definition-overriding=true
