--- a/deploy/src/main/resources/application-dev.properties
+++ b/deploy/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ spring.profiles.active=@app.profile.active@
 server.port=8080
 #SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=1;
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.username=barbos
+spring.datasource.password=190203
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
